find_package(VST3 REQUIRED)

SET(XVALIDATE_SOURCES  ${XVALIDATE_SOURCES}
	${CMAKE_CURRENT_LIST_DIR}/VST3Initialisation.cpp
	${CMAKE_CURRENT_LIST_DIR}/VST3Initialisation.hpp
PARENT_SCOPE)


SET(XVALIDATE_LIBRARIES ${XVALIDATE_LIBRARIES} ${VST3_LIBRARIES} PARENT_SCOPE)
SET(XVALIDATE_INCLUDE_DIRS ${XVALIDATE_INCLUDE_DIRS} ${VST3_INCLUDE_DIRS} PARENT_SCOPE)
